atlassian changes