@@ -3,10 +3,7 @@ package data_structure.arrays.intervals;
 
 import utils.ArrayUtils;
 
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Comparator;
-import java.util.List;
+import java.util.*;
 
 /**
  * https://leetcode.com/problems/merge-intervals/description/?envType=study-plan-v2&envId=top-interview-150
@@ -23,31 +20,56 @@ public class MergeIntervals {
     public static int[][] merge(int[][] intervals) {
         Arrays.sort(intervals, Comparator.comparingInt(a -> a[0]));
         List<int []> result = new ArrayList<>();
-        for (int []  interval :intervals ) {
-            if(result.isEmpty() || result.get(result.size()-1)[1] < interval[0]){
-                result.add(interval);
+        for (int []  curInterval :intervals ) {
+            if(result.isEmpty() || curInterval[0] > result.getLast()[1]){
+                result.add(curInterval);
             }else{
-              result.get(result.size()-1)[1] = Math.max(result.get(result.size()-1)[1],interval[1]);
+              result.get(result.size()-1)[1] = Math.max(result.get(result.size()-1)[1],curInterval[1]);
             }
         }
         return result.toArray(new int[0][]);
     }
+
+
+
+    public static int[][] merge3(int[][] intervals) {
+        Queue<int [] > minHeap = new PriorityQueue<>(Comparator.comparingInt(a -> a[0]));
+        for (int [] interval: intervals){
+            minHeap.add(interval);
+        }
+        List<int []> result = new ArrayList<>();
+        while (!minHeap.isEmpty()){
+            int [] curInterval = minHeap.poll();
+            if(result.isEmpty() || result.getLast()[1] < curInterval[0]){
+                result.add(curInterval);
+            }else {
+
+                result.getLast()[1] = Math.max(curInterval[1],result.getLast()[1]);
+            }
+        }
+        return result.toArray(new int [result.size()][]);
+    }
+
 
     public static int[][] merge2(int[][] intervals) {
         Arrays.sort(intervals, Comparator.comparingInt(a -> a[0]));
         List<int []> result = new ArrayList<>();
         int [] first = intervals[0];
         for (int i = 1; i < intervals.length ; i++) {
-             int [] current = intervals[i];
-             if(first[1] < current[0]){
-                 result.add(first);
-                 first = current;
-             }else{
-                 first[1] = Math.max( first[1],current[1]);
-                 first[0] = Math.min( first[0],current[0]);
-             }
+            int [] current = intervals[i];
+            if(first[1] < current[0]){
+                result.add(first);
+                first = current;
+            }else{
+                first[1] = Math.max( first[1],current[1]);
+                first[0] = Math.min( first[0],current[0]);
+            }
         }
         result.add(first);
         return result.toArray(new int[0][]);
     }
+
+
+
+
 }
